--- a/step-9/src/main/resources/webroot/index.html
+++ b/step-9/src/main/resources/webroot/index.html
@@ -15,7 +15,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<html lang="en" ng-app="wikiApp">
+<!--tag::head[] -->
+<html lang="en" ng-app="wikiApp"> <!--1-->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +26,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
-  <script src="/app/wiki.js"></script>
+  <script src="/app/wiki.js"></script>  <!--2-->
   <style>
     body {
       padding-top: 2rem;
@@ -34,9 +35,14 @@
   </style>
 </head>
 <body>
+<!--end::head[] -->
 
+<!--tag::container[]-->
 <div class="container" ng-controller="WikiController">
+  <!-- (...) -->
+<!--end::container[]-->
 
+  <!--tag::buttons-row[] -->
   <div class="row">
 
     <div class="col-md-12">
@@ -46,30 +52,33 @@
           <i class="fa fa-file-text" aria-hidden="true"></i> Pages
         </button>
         <div class="dropdown-menu" aria-labelledby="pageDropdownButton">
-          <a ng-repeat="page in pages track by page.id" class="dropdown-item" ng-click="load(page.id)" href="#">{{page.name}}</a>
+          <a ng-repeat="page in pages track by page.id" class="dropdown-item" ng-click="load(page.id)" href="#">{{page.name}}</a> <!--1-->
         </div>
       </span>
       <span>
         <button type="button" class="btn btn-secondary" ng-click="reload()"><i class="fa fa-refresh"
-                                                                               aria-hidden="true"></i> Reload</button>
+                                                                               aria-hidden="true"></i> Reload</button> <!--2-->
       </span>
       <span>
         <button type="button" class="btn btn-secondary" ng-click="newPage()"><i class="fa fa-plus-square"
                                                                                 aria-hidden="true"></i> New page</button>
       </span>
       <span class="float-right">
-        <button type="button" class="btn btn-secondary" ng-click="delete()" ng-show="pageExists()"><i class="fa fa-trash" aria-hidden="true"></i> Delete page</button>
+        <button type="button" class="btn btn-secondary" ng-click="delete()" ng-show="pageExists()"><i class="fa fa-trash"
+                                                                                                      aria-hidden="true"></i> Delete page</button> <!--3-->
       </span>
     </div>
 
-    <div class="col-md-12">
+    <div class="col-md-12"> <!--4-->
       <div class="invisible alert" role="alert" id="alertMessage">
         {{alertMessage}}
       </div>
     </div>
 
   </div>
+  <!--end::buttons-row[] -->
 
+  <!--tag::markdown[] -->
   <div class="row">
 
     <div class="col-md-6" id="rendering"></div>
@@ -78,7 +87,7 @@
       <form>
         <div class="form-group">
           <label for="markdown">Markdown</label>
-          <textarea id="markdown" class="form-control" rows="25" ng-model="pageMarkdown"></textarea>
+          <textarea id="markdown" class="form-control" rows="25" ng-model="pageMarkdown"></textarea> <!--1-->
         </div>
         <div class="form-group">
           <label for="pageName">Name</label>
@@ -89,9 +98,11 @@
     </div>
 
   </div>
+  <!--end::markdown[] -->
 
 </div>
 
+<!--tag::bottom[] -->
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
         integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
@@ -104,3 +115,4 @@
 
 </body>
 </html>
+<!--end::bottom[] -->
