--- a/step-9/src/main/resources/webroot/index.html
+++ b/step-9/src/main/resources/webroot/index.html
@@ -21,9 +21,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Wiki Angular App</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
   <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
   <script src="/app/wiki.js"></script>  <!--2-->
   <style>
@@ -39,7 +40,7 @@
 <!--tag::container[]-->
 <div class="container" ng-controller="WikiController">
   <!-- (...) -->
-<!--end::container[]-->
+  <!--end::container[]-->
 
   <!--tag::buttons-row[] -->
   <div class="row">
@@ -51,20 +52,23 @@
           <i class="fa fa-file-text" aria-hidden="true"></i> Pages
         </button>
         <div class="dropdown-menu" aria-labelledby="pageDropdownButton">
-          <a ng-repeat="page in pages track by page.id" class="dropdown-item" ng-click="load(page.id)" href="#">{{page.name}}</a> <!--1-->
+          <a ng-repeat="page in pages track by page.id" class="dropdown-item" ng-click="load(page.id)" href="#">{{page.name}}</a>
+          <!--1-->
         </div>
       </span>
       <span>
         <button type="button" class="btn btn-secondary" ng-click="reload()"><i class="fa fa-refresh"
-                                                                               aria-hidden="true"></i> Reload</button> <!--2-->
+                                                                               aria-hidden="true"></i> Reload</button>
+        <!--2-->
       </span>
       <span>
         <button type="button" class="btn btn-secondary" ng-click="newPage()"><i class="fa fa-plus-square"
                                                                                 aria-hidden="true"></i> New page</button>
       </span>
       <span class="float-right">
-        <button type="button" class="btn btn-secondary" ng-click="delete()" ng-show="pageExists()"><i class="fa fa-trash"
-                                                                                                      aria-hidden="true"></i> Delete page</button> <!--3-->
+        <button type="button" class="btn btn-secondary" ng-click="delete()" ng-show="pageExists()"><i
+          class="fa fa-trash"
+          aria-hidden="true"></i> Delete page</button> <!--3-->
       </span>
     </div>
 
@@ -92,7 +96,9 @@
           <label for="pageName">Name</label>
           <input class="form-control" type="text" value="" id="pageName" ng-model="pageName" ng-disabled="pageExists()">
         </div>
-        <button type="button" class="btn btn-secondary" ng-click="save()"><i class="fa fa-pencil" aria-hidden="true"></i> Save</button>
+        <button type="button" class="btn btn-secondary" ng-click="save()"><i class="fa fa-pencil"
+                                                                             aria-hidden="true"></i> Save
+        </button>
       </form>
     </div>
 
@@ -102,13 +108,15 @@
 </div>
 
 <!--tag::bottom[] -->
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
 </body>
 </html>
 <!--end::bottom[] -->
